k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-mongo
spec:
  selector:
    matchLabels:
      app: database-mongo
  template:
    metadata:
      labels:
        app: database-mongo
    spec:
      containers:
      - name: database-mongo
        image: mongo:3.6.8
        volumeMounts:
          - mountPath: /data/db
            name: mongo-persistent-storage
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: database-pvc
