k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-t20
spec:
  selector:
    matchLabels:
      app: server-t20
  template:
    metadata:
      labels:
        app: server-t20
    spec:
      containers:
      - name: server-t20
        image: tuanminh009/server-t20
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
