k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client-t20
  ports:
  - port: 3000
    targetPort: 3000
