k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: ClusterIP
  selector:
    app: database-mongo
  ports:
  - port: 27017
    targetPort: 27017
