k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server-t20
  ports:
  - port: 8000
    targetPort: 8000
